Style restart button

--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -37,7 +37,7 @@
      <button id="paper" onclick="numberOfClicks(); rockPaperScissors(); iPaper()">Paper</button>
       <button id="scissors" onclick="numberOfClicks(); rockPaperScissors(); iScissors()">Scissors</button>
     </div>
-    <button id="reset" onclick="resetCount()">Reset</button>
+    <button id="reset" onclick="resetCount()">Restart</button>
   </div>
   <script src="rockPaperScissors.js"></script>
 </body>
