Add winner popup

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <h1 id="clicks">0</h1>
     </div>
     <div class="my-buttons">
-    <button id="rock" onclick="rockPaperScissors(); iRock(); numberOfClicks()">Rock</button>
-     <button id="paper" onclick="numberOfClicks(); rockPaperScissors(); iPaper()">Paper</button>
-      <button id="scissors" onclick="numberOfClicks(); rockPaperScissors(); iScissors()">Scissors</button>
+    <button id="rock" onclick="rockPaperScissors(); iRock()">Rock</button>
+     <button id="paper" onclick="rockPaperScissors(); iPaper();">Paper</button>
+      <button id="scissors" onclick="rockPaperScissors(); iScissors();">Scissors</button>
     </div>
     <button id="reset" onclick="resetCount()">Restart</button>
   </div>
