Change End game button to Restart

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      <button id="paper" onclick="rockPaperScissors(); iPaper();">Paper</button>
       <button id="scissors" onclick="rockPaperScissors(); iScissors();">Scissors</button>
     </div>
-    <button id="reset" onclick="resetCount()">End Game</button>
+    <button id="reset" onclick="resetCount()">Restart</button>
   </div>
   <script src="rockPaperScissors.js"></script>
 </body>
