Add final score function

--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
   <div class="container">
     <div class="heading">
       <h1 class="myHeading">Rock Paper Scissors Game</h1>
+      <div class="gameSets">
+        <div class="scoreLine">
+            <p>You</p>
+            <h1 id="myOverallScore">0</h1>
+        </div>
+        <p>Score Line</p>
+        <div class="scoreLine">
+        <p>Computer</p>
+          <h1 id="computerOverallScore">0</h1>
+        </div>  
+      </div>
+      <div id="rules">
       <p>Rock wins against scissors</p>
       <p>Scissors win against paper</p>
       <p>Paper wins against rock</p>
+      </div>
       </div>
     <div class="score">
       <div class="statistics">
